config-root/namespaces/jx-staging/nodey542/nodey542-nodey542-deploy.yaml
# Source: nodey542/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodey542-nodey542
  labels:
    draft: draft-app
    chart: "nodey542-1.0.6"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-staging
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: nodey542-nodey542
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: nodey542-nodey542
    spec:
      serviceAccountName: nodey542-nodey542
      containers:
        - name: nodey542
          image: "gcr.io/jenkins-x-labs-bdd/nodey542:1.0.6"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
