config-root/namespaces/jx-staging/nodey542/nodey542-svc.yaml
# Source: nodey542/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodey542
  labels:
    chart: "nodey542-2.0.1310"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    fabric8.io/expose: "true"
    fabric8.io/ingress.annotations: 'kubernetes.io/ingress.class: nginx'
  namespace: jx-staging
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: nodey542-nodey542
