config-root/namespaces/jx-staging/nodey542/nodey542-ingress.yaml
# Source: nodey542/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: nodey542
  namespace: jx-staging
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: nodey542
              servicePort: 80
      host: nodey542-jx-staging.35.184.150.204.nip.io
